fixed cards overlap on header

--- a/src/style.css
+++ b/src/style.css
@@ -88,3 +88,7 @@ h6 {
 .card:hover .card-inner {
     transform: rotateY(180deg);
 }
+
+.stars {
+    margin-top: 0.3rem;
+}
